# knightly

./: .gitignore  Cargo.toml  README.MD  rust-toolchain.toml
assets/data/actors/: npc.actor  player.actor
assets/data/atlases/: actors.atlas  terrain.atlas
assets/data/terrain/: floor.terrain  wall.terrain
src/: constants.rs  main.rs
src/assets/: asset_context.rs  assets_plugin.rs  handle_asset_loaded.rs  loaded_assets.rs  loader_error.rs  mod.rs
src/assets/actors/: actor_asset.rs  actor_loader.rs  actor_record.rs  mod.rs
src/assets/atlases/: atlas_loader.rs  atlas_record.rs  mod.rs
src/assets/terrain/: mod.rs  terrain_asset.rs  terrain_loader.rs  terrain_record.rs
src/commands/: mod.rs  move_player.rs
src/components/: components_plugin.rs  map.rs  mod.rs  position.rs  tags.rs
src/states/: app_state.rs  game_state.rs  mod.rs  states_plugin.rs
src/systems/: build_camera.rs  enter_game.rs  left_walker.rs  load_assets.rs  mod.rs  player_input.rs  set_window_icon.rs  setup.rs  systems_plugin.rs  update_positions.rs
src/traits/: spawn_at.rs
src/types/: mod.rs  rectangle.rs  tile_type.rs
src/types/traits/: mod.rs  spawn.rs  spawn_at.rs
